--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <img src="gallery2..jpg"loading="lazy" ... alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
       <img src="gallery3..jpg"loading="lazy" ... alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
       <img src="gallery4.jpg"loading="lazy" ... alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
+      <img src="gallery5.jpg"loading="lazy" ... alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
     </div>
   </div>
 </section>
