--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
     </div>
   </div>
 </section>
+  <!-- Proprietor Section -->
+<section class="py-16 bg-white px-4">
+  <div class="container mx-auto flex flex-col md:flex-row items-center gap-8" data-aos="fade-up">
+    <div class="flex-shrink-0 mx-auto md:mx-0 w-48 h-48 rounded-full overflow-hidden shadow-lg border-4 border-green-600">
+      <img src="gallery8.jpg" class="w-full h-full object-cover" />
+    </div>
+    <div>
+      <h2 class="text-2xl font-bold mb-2">Meet Our Proprietor</h2>
+      <p class="text-gray-700"> <strong>Ms. Thilagavathi S</strong><br>
+      Our founder and guiding force, with years of experience in the garment industry, ensures each project reflects the highest standards of quality and commitment. Passionate, detail-oriented, and customer-focused your needs are in trusted hands.</p>
+    </div>
+  </div>
+</section>
 
 <!-- Enquiry Form -->
 <section id="enquiry" class="py-16 bg-white px-4">
