--- a/index.html
+++ b/index.html
@@ -165,6 +165,19 @@
     <iframe src="Catalogue.pdf" class="w-full h-full" frameborder="0" allowfullscreen loading="lazy" title="Catalogue PDF"></iframe>
   </div>
 </section>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6835f7dc86230a19107424cf/1is9d0e7n';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 <!-- Location Map Section -->
 <section id="location" class="py-16 bg-white px-4">
