--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
     </div>
   </div>
 </section>
+  <!-- Video Showcase Section -->
+<section id="video" class="py-16 bg-white px-4">
+  <div class="container mx-auto text-center" data-aos="fade-up">
+    <h2 class="text-3xl font-bold mb-6">Watch Our Work in Action</h2>
+    <video controls autoplay muted loop class="w-full max-w-3xl mx-auto rounded-xl shadow-md">
+      <source src="yourvideo.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</section>
+  <!-- Animated Background Circles -->
+<div class="fixed top-0 left-0 w-full h-full -z-10 overflow-hidden">
+  <div class="absolute bg-green-100 rounded-full opacity-20 w-24 h-24 animate-[float1_20s_linear_infinite] left-[10%] top-[100%]"></div>
+  <div class="absolute bg-green-100 rounded-full opacity-20 w-32 h-32 animate-[float2_22s_linear_infinite] left-[30%] top-[110%]"></div>
+  <div class="absolute bg-green-100 rounded-full opacity-20 w-16 h-16 animate-[float1_24s_linear_infinite] left-[50%] top-[120%]"></div>
+  <div class="absolute bg-green-100 rounded-full opacity-20 w-20 h-20 animate-[float2_26s_linear_infinite] left-[70%] top-[130%]"></div>
+  <div class="absolute bg-green-100 rounded-full opacity-20 w-28 h-28 animate-[float1_28s_linear_infinite] left-[85%] top-[140%]"></div>
+</div>
   <!-- Proprietor Section -->
 <section class="py-16 bg-white px-4">
   <div class="container mx-auto flex flex-col md:flex-row items-center gap-8" data-aos="fade-up">
