--- a/index.html
+++ b/index.html
@@ -21,6 +21,81 @@
       height: 100%;
       object-fit: cover;
     }
+    <!-- Essential Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- SEO Meta Tags -->
+  <title>SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy</title>
+  <meta name="title" content="SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy" />
+  <meta name="description" content="SHE CARE by Sree Alagar Enterprises is Trichy's trusted source for custom-made uniforms and garments. We specialize in school uniforms, hospital wear, corporate clothing, and embroidery with on-time delivery across Tamil Nadu." />
+  <meta name="keywords" content="SHE CARE, custom uniforms Trichy, garment manufacturer Tamil Nadu, embroidery services, school uniforms Trichy, hospital uniforms, corporate uniforms, tailoring Trichy, women garments, custom tailoring Trichy" />
+  <meta name="author" content="Sree Alagar Enterprises" />
+  <link rel="canonical" href="https://www.shecaregarments.com/" />
+
+  <!-- Open Graph Meta Tags for Facebook/LinkedIn -->
+  <meta property="og:title" content="SHE CARE – Sree Alagar Enterprises | Custom Uniforms & Tailoring in Trichy" />
+  <meta property="og:description" content="Leading garment manufacturer in Trichy delivering premium school uniforms, corporate wear, and embroidery services across Tamil Nadu." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.shecaregarments.com/" />
+  <meta property="og:image" content="https://www.shecaregarments.com/logo.jpg" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SHE CARE – Sree Alagar Enterprises" />
+  <meta name="twitter:description" content="Trusted uniform tailor in Trichy offering quality garments and embroidery. School, hospital, and business wear tailored to perfection." />
+  <meta name="twitter:image" content="https://www.shecaregarments.com/logo.jpg" />
+
+  <!-- Structured Data for Google (Local Business) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "SHE CARE – Sree Alagar Enterprises",
+    "image": "https://sreealagarenterprises.in/logo..jpg",
+    "telephone": "+919442190903",
+    "email": "shecare2011@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "No.19/20 Keels, Chatiram Road (Tahsildar Lane), Thennur",
+      "addressLocality": "Trichy",
+      "addressRegion": "Tamil Nadu",
+      "postalCode": "620017",
+      "addressCountry": "IN"
+    },
+    "url": "https://sreealagarenterprises.in",
+    "sameAs": [
+      "https://www.instagram.com/yourprofile",
+      "https://www.facebook.com/yourpage"
+    ]
+  }
+  </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="logo..jpg" type="image/png" />
+
+  <!-- Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+
+  <!-- AOS Animation -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+
+  <!-- Alpine.js for navbar -->
+  <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+
+  <!-- Background Animation (if needed) -->
+  <style>
+    @keyframes float1 {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(-200vh); }
+    }
+    @keyframes float2 {
+      0% { transform: translateY(0) scale(1); }
+      100% { transform: translateY(-200vh) scale(1.2); }
+    }
   </style>
 </head>
 <body class="bg-white text-gray-800 overflow-x-hidden">
@@ -30,7 +105,7 @@
   <div class="container mx-auto px-4 py-4 flex justify-between items-center">
     <div class="flex items-center space-x-3">
       <div class="logo-circle">
-        <img src="logo.jpg" alt="SHE CARE Logo" />
+        <img src="logo..jpg" alt="SHE CARE Logo" />
       </div>
       <div>
         <div class="text-xl md:text-2xl font-bold text-green-600">SHE CARE</div>
