--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <div class="container mx-auto text-center" data-aos="fade-up">
     <h2 class="text-3xl font-bold mb-6">Watch Our Work in Action</h2>
     <video controls autoplay muted loop class="w-full max-w-3xl mx-auto rounded-xl shadow-md">
-      <source src="yourvideo.mp4" type="video/mp4">
+      <source src="videoplayback.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
