--- a/index.html
+++ b/index.html
@@ -307,6 +307,59 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
   </div>
 </section>
+<!-- Google Translate Integration with Tamil Button -->
+<!-- Place this near the end of <body> or before </body> -->
+
+<!-- Google Translate Script -->
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,ta',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+<!-- Hidden Google Translate Element -->
+<div id="google_translate_element" class="hidden"></div>
+
+<!-- Floating Language Toggle Button (Tamil) -->
+<div class="fixed bottom-4 left-4 z-50">
+  <button onclick="changeLanguage('ta')" class="bg-yellow-400 px-3 py-2 rounded shadow text-black hover:bg-yellow-500">
+    தமிழ்
+  </button>
+</div>
+
+<!-- Language Change Logic -->
+<script>
+  function changeLanguage(lang) {
+    const frame = document.querySelector('iframe.goog-te-menu-frame');
+    if (!frame) {
+      alert("Please wait while Google Translate loads...");
+      return;
+    }
+    const innerDoc = frame.contentDocument || frame.contentWindow.document;
+    const langLinks = innerDoc.querySelectorAll('.goog-te-menu2-item span.text');
+    langLinks.forEach(function(el) {
+      if (el.innerText.toLowerCase().includes(lang)) {
+        el.click();
+      }
+    });
+  }
+</script>
+
+<!-- Hide Google Translate Banner and Icon -->
+<style>
+  .goog-te-banner-frame.skiptranslate, 
+  .goog-te-gadget-icon {
+    display: none !important;
+  }
+  body {
+    top: 0px !important;
+  }
+</style>
 
 <!-- Footer -->
 <footer class="bg-green-600 text-white text-center py-4">
