--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
   </div>
 </section>
-<!-- Google Translate Integration with Tamil Button -->
-<!-- Place this near the end of <body> or before </body> -->
+<!-- 🌐 Google Translate: Tamil + English Toggle -->
 
-<!-- Google Translate Script -->
+<!-- Google Translate Initialization -->
+<div id="google_translate_element" class="hidden"></div>
 <script type="text/javascript">
   function googleTranslateElementInit() {
     new google.translate.TranslateElement({
@@ -322,45 +322,49 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<!-- Hidden Google Translate Element -->
-<div id="google_translate_element" class="hidden"></div>
-
-<!-- Floating Language Toggle Button (Tamil) -->
-<div class="fixed bottom-4 left-4 z-50">
+<!-- Floating Language Toggle Buttons -->
+<div class="fixed bottom-4 left-4 z-50 space-y-2">
   <button onclick="changeLanguage('ta')" class="bg-yellow-400 px-3 py-2 rounded shadow text-black hover:bg-yellow-500">
     தமிழ்
   </button>
+  <button onclick="changeLanguage('en')" class="bg-blue-500 px-3 py-2 rounded shadow text-white hover:bg-blue-600">
+    English
+  </button>
 </div>
 
-<!-- Language Change Logic -->
+<!-- Language Toggle Logic -->
 <script>
   function changeLanguage(lang) {
-    const frame = document.querySelector('iframe.goog-te-menu-frame');
-    if (!frame) {
-      alert("Please wait while Google Translate loads...");
-      return;
-    }
-    const innerDoc = frame.contentDocument || frame.contentWindow.document;
-    const langLinks = innerDoc.querySelectorAll('.goog-te-menu2-item span.text');
-    langLinks.forEach(function(el) {
-      if (el.innerText.toLowerCase().includes(lang)) {
-        el.click();
-      }
-    });
+    const interval = setInterval(() => {
+      const frame = document.querySelector('iframe.goog-te-menu-frame');
+      if (!frame) return;
+
+      const innerDoc = frame.contentDocument || frame.contentWindow.document;
+      const langOptions = innerDoc.querySelectorAll('.goog-te-menu2-item span.text');
+
+      langOptions.forEach(function(el) {
+        if (el.innerText.toLowerCase().includes(lang)) {
+          el.click();
+          clearInterval(interval); // Stop once language is selected
+        }
+      });
+    }, 500); // Check every 500ms
   }
 </script>
 
-<!-- Hide Google Translate Banner and Icon -->
+<!-- Hide Default Google Translate Bar and Icon -->
 <style>
-  .goog-te-banner-frame.skiptranslate, 
+  .goog-te-banner-frame.skiptranslate,
   .goog-te-gadget-icon {
     display: none !important;
   }
   body {
     top: 0px !important;
   }
+  .goog-te-menu-frame {
+    z-index: 9999 !important;
+  }
 </style>
-
 <!-- Footer -->
 <footer class="bg-green-600 text-white text-center py-4">
   <p>&copy; 2025 SHE CARE – Sree Alagar Enterprises <br> All rights reserved.</p>
