--- a/index.html
+++ b/index.html
@@ -297,6 +297,55 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+<!--Premium Testimonials Section -->
+<section class="py-20 bg-white px-4">
+  <div class="max-w-6xl mx-auto text-center" data-aos="fade-up">
+    <h2 class="text-4xl font-bold text-gray-800 mb-12">What Our Customers Say</h2>
+    
+    <div class="grid md:grid-cols-3 gap-10">
+      
+      <!-- Testimonial Card 1 -->
+      <div class="bg-gray-50 rounded-2xl p-6 shadow-md border border-gray-200" data-aos="zoom-in" data-aos-delay="100">
+        <div class="text-5xl text-green-400 mb-4">“</div>
+        <p class="text-gray-700 italic mb-6">Fantastic tailoring service with attention to detail and timely delivery. Highly recommend!</p>
+        <div class="flex items-center justify-center space-x-3 mt-6">
+          <div class="w-12 h-12 bg-green-100 text-green-700 flex items-center justify-center rounded-full font-bold">A</div>
+          <div class="text-left">
+            <p class="text-sm font-semibold text-gray-800">Arjun R</p>
+            <p class="text-xs text-gray-500">Trichy</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testimonial Card 2 -->
+      <div class="bg-gray-50 rounded-2xl p-6 shadow-md border border-gray-200" data-aos="zoom-in" data-aos-delay="200">
+        <div class="text-5xl text-green-400 mb-4">“</div>
+        <p class="text-gray-700 italic mb-6">We ordered our entire school uniforms here — the stitching quality and fabric were excellent!</p>
+        <div class="flex items-center justify-center space-x-3 mt-6">
+          <div class="w-12 h-12 bg-green-100 text-green-700 flex items-center justify-center rounded-full font-bold">P</div>
+          <div class="text-left">
+            <p class="text-sm font-semibold text-gray-800">Priya M</p>
+            <p class="text-xs text-gray-500">School Admin</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testimonial Card 3 -->
+      <div class="bg-gray-50 rounded-2xl p-6 shadow-md border border-gray-200" data-aos="zoom-in" data-aos-delay="300">
+        <div class="text-5xl text-green-400 mb-4">“</div>
+        <p class="text-gray-700 italic mb-6">Highly professional team and affordable custom embroidery. My clients loved the finish!</p>
+        <div class="flex items-center justify-center space-x-3 mt-6">
+          <div class="w-12 h-12 bg-green-100 text-green-700 flex items-center justify-center rounded-full font-bold">K</div>
+          <div class="text-left">
+            <p class="text-sm font-semibold text-gray-800">Karthik</p>
+            <p class="text-xs text-gray-500">Business Owner</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 <!-- Location Map Section -->
 <section id="location" class="py-16 bg-white px-4">
