--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
     <p class="mb-4">GROUND FLOOR, NO.19/20 KEELS,<br />CHATIRAM ROAD (TAHSILDAR LANE),<br />THENNUR, TRICHY-620017</p>
   </div>
 </section>
+<!-- 📞 Floating Call Button -->
+<div class="fixed bottom-20 right-4 z-50">
+  <a href="tel:9442190903" 
+     aria-label="Call Now"
+     class="w-14 h-14 flex items-center justify-center rounded-full bg-green-600 text-white shadow-lg hover:bg-green-700 transition duration-300 text-2xl">
+    📞
+  </a>
+</div>
 
 <!-- WhatsApp Floating Button -->
 <div id="whatsapp-button" class="fixed top-1/2 right-4 transform -translate-y-1/2 z-50">
