--- a/index.html
+++ b/index.html
@@ -211,15 +211,38 @@
     <p class="mb-4">GROUND FLOOR, NO.19/20 KEELS,<br />CHATIRAM ROAD (TAHSILDAR LANE),<br />THENNUR, TRICHY-620017</p>
   </div>
 </section>
-<!-- 📞 Floating Call Button -->
-<div class="fixed bottom-20 right-4 z-50">
-  <a href="tel:9442190903" 
-     aria-label="Call Now"
-     class="w-14 h-14 flex items-center justify-center rounded-full bg-green-600 text-white shadow-lg hover:bg-green-700 transition duration-300 text-2xl">
-    📞
-  </a>
-</div>
+<section class="py-16 bg-white text-center" data-aos="zoom-in">
+  <h2 class="text-3xl font-bold mb-8">Our Achievements</h2>
+  <div class="flex justify-center gap-12 text-green-600 text-4xl font-bold">
+    <div><span id="clients">400</span>+ Clients</div>
+    <div><span id="orders">3000</span>+ Orders</div>
+    <div><span id="years">16</span> Years</div>
+  </div>
+</section>
 
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const counters = [
+      { id: "clients", end: 500 },
+      { id: "orders", end: 1200 },
+      { id: "years", end: 10 }
+    ];
+    counters.forEach(({ id, end }) => {
+      let i = 0;
+      const el = document.getElementById(id);
+      const step = Math.ceil(end / 100);
+      const interval = setInterval(() => {
+        i += step;
+        if (i >= end) {
+          el.innerText = end;
+          clearInterval(interval);
+        } else {
+          el.innerText = i;
+        }
+      }, 20);
+    });
+  });
+</script>
 <!-- WhatsApp Floating Button -->
 <div id="whatsapp-button" class="fixed top-1/2 right-4 transform -translate-y-1/2 z-50">
   <a href="https://wa.me/919442190903" target="_blank" rel="noopener noreferrer">
