--- a/index.html
+++ b/index.html
@@ -342,6 +342,14 @@
     </form>
   </div>
 </section>
+<section class="py-16 bg-gray-50 text-center px-4">  
+  <h2 class="text-3xl font-bold mb-6">Certifications & Recognition</h2>  
+  <div class="flex flex-wrap justify-center gap-6">  
+    <img src="award1.jpg" alt="Award 1" class="w-32 h-32 object-contain" />  
+    <img src="award2.jpg" alt="Award 2" class="w-32 h-32 object-contain" />  
+    <img src="cert1.jpg" alt="Certification" class="w-32 h-32 object-contain" />  
+  </div>  
+</section>
  
 
 <!-- Catalogue Section -->
