--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
     0% { transform: translateY(0) scale(1); }
     100% { transform: translateY(-200vh) scale(1.2); }
   }
+<!-- Favicon for most browsers -->
+<link rel="icon" href="sreealagarenterprises.in/favicon.ico" type="image/x-icon" />
+
+<!-- Fallback for PNG if .ico not supported -->
+<link rel="icon" href="/logo.jpg" type="image/jpg" />
+
+<!-- Optional: Theme Color for Chrome/Android -->
+<meta name="theme-color" content="#10b981" />
+
+<!-- Optional: For Windows Tiles -->
+<meta name="msapplication-TileImage" content="/favicon.png" />
+<meta name="msapplication-TileColor" content="#10b981" />
 
   /* WhatsApp Button Customization (Optional style additions if needed) */
   #whatsapp-button img {
