--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     0% { transform: translateY(0) scale(1); }
     100% { transform: translateY(-200vh) scale(1.2); }
   }
-<!-- Favicon for most browsers -->
-<link rel="icon" href="sreealagarenterprises.in/favicon.ico" type="image/x-icon" />
+<!-- Favicon for all major browsers -->
+<link rel="icon" href="https://sreealagarenterprises.in/logo.jpg" type="image/jpeg" />
 
-<!-- Fallback for PNG if .ico not supported -->
-<link rel="icon" href="/logo.jpg" type="image/jpg" />
+<!-- Apple Touch Icon (if you have a 180x180 version) -->
+<link rel="apple-touch-icon" href="https://sreealagarenterprises.in/logo.jpg" />
 
-<!-- Optional: Theme Color for Chrome/Android -->
+<!-- Theme color for mobile browsers -->
 <meta name="theme-color" content="#10b981" />
 
-<!-- Optional: For Windows Tiles -->
-<meta name="msapplication-TileImage" content="/favicon.png" />
+<!-- Windows tile color and image -->
+<meta name="msapplication-TileImage" content="https://sreealagarenterprises.in/logo.jpg" />
 <meta name="msapplication-TileColor" content="#10b981" />
 
   /* WhatsApp Button Customization (Optional style additions if needed) */
