--- a/index.html
+++ b/index.html
@@ -32,18 +32,10 @@
     100% { transform: translateY(-200vh) scale(1.2); }
   }
 <!-- Favicon for all major browsers -->
-<link rel="icon" href="https://sreealagarenterprises.in/logo.jpg" type="image/jpeg" />
-
-<!-- Apple Touch Icon (if you have a 180x180 version) -->
-<link rel="apple-touch-icon" href="https://sreealagarenterprises.in/logo.jpg" />
-
-<!-- Theme color for mobile browsers -->
-<meta name="theme-color" content="#10b981" />
-
-<!-- Windows tile color and image -->
-<meta name="msapplication-TileImage" content="https://sreealagarenterprises.in/logo.jpg" />
-<meta name="msapplication-TileColor" content="#10b981" />
-
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   /* WhatsApp Button Customization (Optional style additions if needed) */
   #whatsapp-button img {
     transition: transform 0.3s ease;
