--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>SHE CARE – Sree Alagar Enterprises</title>
-  <!-- Favicon for all major browsers -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="https://sreealagarenterprises.in/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://sreealagarenterprises.in/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://sreealagarenterprises.in/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://sreealagarenterprises.in/favicon-16x16.png">
+  <link rel="manifest" href="https://sreealagarenterprises.in/site.webmanifest">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
