--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       <div class="flex flex-col md:flex-row gap-10 items-center">
         <div class="md:w-1/2">
           <div class="premium-card overflow-hidden">
-            <img src="about-image.jpg" alt="About SHE CARE" class="w-full h-80 object-cover" />
+            <img src="about-logo.jpg" alt="About SHE CARE" class="w-full h-80 object-cover" />
           </div>
         </div>
 
