--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       <div class="flex flex-col md:flex-row gap-10 items-center">
         <div class="md:w-1/2">
           <div class="premium-card overflow-hidden">
-            <img src="about-logo.jpg" alt="About SHE CARE" class="w-full h-80 object-cover" />
+            <img src="about-logo.jpg" alt="About SHE CARE" class="w-40 h-40 object-cover" />
           </div>
         </div>
 
@@ -1320,8 +1320,8 @@
     // Gallery lightbox
     const galleryImages = [
       'gallery1.jpg',
-      'gallery2.jpg',
-      'gallery3.jpg',
+      'gallery2.. jpg',
+      'gallery3..jpg',
       'gallery4.jpg',
       'gallery5.jpg',
       'gallery7.jpg'
