--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       <div class="flex flex-col md:flex-row gap-10 items-center">
         <div class="md:w-1/2">
           <div class="premium-card overflow-hidden">
-            <img src="about-logo.jpg" alt="About SHE CARE" class="w-40 h-40 object-cover" />
+          <alt="About SHE CARE" class="w-40 h-40 object-cover"/>
           </div>
         </div>
 
@@ -646,13 +646,13 @@
             <h3 class="font-bold">Corporate Uniforms</h3>
           </div>
         </div>
-        <div class="gallery-item" onclick="openLightbox('gallery2.jpg')">
+        <div class="gallery-item" onclick="openLightbox('gallery2..jpg')">
           <img src="gallery2.jpg" alt="Gallery Image 2" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">School Uniforms</h3>
           </div>
         </div>
-        <div class="gallery-item" onclick="openLightbox('gallery3.jpg')">
+        <div class="gallery-item" onclick="openLightbox('gallery3..jpg')">
           <img src="gallery3.jpg" alt="Gallery Image 3" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Embroidery Work</h3>
