--- a/index.html
+++ b/index.html
@@ -647,13 +647,13 @@
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('gallery2..jpg')">
-          <img src="gallery2.jpg" alt="Gallery Image 2" loading="lazy" />
+          <img src="gallery2..jpg" alt="Gallery Image 2" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">School Uniforms</h3>
           </div>
         </div>
         <div class="gallery-item" onclick="openLightbox('gallery3..jpg')">
-          <img src="gallery3.jpg" alt="Gallery Image 3" loading="lazy" />
+          <img src="gallery3..jpg" alt="Gallery Image 3" loading="lazy" />
           <div class="gallery-overlay">
             <h3 class="font-bold">Embroidery Work</h3>
           </div>
